# hush-v1

./: .env.example  .gitignore  Anchor.toml  README.md  brand.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_output.txt  tsconfig.json
.brand-preview/: index.html
app/: next.config.mjs  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/privacy/: page.tsx
app/src/app/terms/: page.tsx
app/src/hooks/: useAdviseGrant.ts  useHushAccount.ts  usePrivateBalance.ts  useShieldDeposit.ts  useViewingKey.ts
app/src/lib/: api.ts  utils.ts
app/src/providers/: HushProvider.tsx  QueryProvider.tsx  WalletProvider.tsx  index.tsx
app/src/types/: package.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LOI.md  USER_STORIES.md
programs/hush/: Cargo.toml  error.txt
programs/hush/src/: constants.rs  errors.rs  lib.rs
programs/hush/src/instructions/: advise_grant.rs  create_daf_account.rs  initialize_vault.rs  mod.rs  rebalance_yield.rs  settle_grant.rs  shield_deposit.rs
programs/hush/src/states/: daf_account.rs  grant_request.rs  hush_vault.rs  mod.rs  shielded_account.rs  vault.rs
scripts/: deploy.sh  init-vault.ts  seed-demo.ts
server/: package.json  tsconfig.json
server/src/: index.ts
server/src/agents/: SettlementRelay.ts  YieldAgent.ts
server/src/db/: client.ts  schema.ts  seed.ts
server/src/routes/: accounts.ts  compliance.ts  index.ts  transactions.ts
server/src/services/: AccountService.ts  ViewingKeyService.ts
test-ledger/: faucet-keypair.json
tests/: hush.ts
(+26 files in other folders)
